# Anneal

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  TODO.md  deny.toml
.github/workflows/: ci.yml  release.yml
contrib/: .shellcheckrc  PKGBUILD  PKGBUILD-bin  PKGBUILD-git  anneal-trigger.hook  find-trigger-candidates.sh
docs/: CURATED_LIST.md  DESIGN.md  ISSUES.md  TRIGGERING.md
src/: cli.rs  config.rs  db.rs  lib.rs  main.rs  output.rs  overrides.rs  trigger.rs  triggers.rs  version.rs
tests/: integration.rs
