[package]
name = "anneal"
version = "0.1.0"
edition = "2024"
description = "Proactive AUR rebuild management for Arch Linux"
license = "GPL-3.0-or-later"
repository = "https://github.com/MarkWells-Dev/Anneal"
keywords = ["arch-linux", "aur", "pacman", "rebuild"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
owo-colors = "4"
libc = "0.2"
rusqlite = { version = "0.34", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
panic = "deny"
unimplemented = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
